FIX: modal z-index

--- a/src/components/Layouts/Header/styles.module.scss
+++ b/src/components/Layouts/Header/styles.module.scss
@@ -2,7 +2,7 @@
 
 .header {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   background: $color-background-main;
 }
 
