--- a/src/components/Modal/Layout/styles.module.scss
+++ b/src/components/Modal/Layout/styles.module.scss
@@ -9,7 +9,7 @@
   bottom: 0;
 
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 3;
 
   display: flex;
   justify-content: end;
@@ -23,7 +23,7 @@
   bottom: 0;
 
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 3;
 
   display: flex;
   justify-content: center;
